--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
   <section class="rounded-lg border">
     <div class="flex flex-col space-y-1.5 p-6">
       <h3 class="text-3xl leading-none font-medium">er·u·dite</h3>
+      <h1>TEST</h1>
       <p class="text-muted-foreground text-sm">
         /ˈer(y)əˌdīt/ &bull; <span class="font-medium">adjective</span>
       </p>
