--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import logo from '../../public/static/logo.svg'
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
       <Image src={logo} alt="Logo" class="size-5 sm:size-6" />
       <span
-        class="hidden h-full text-lg leading-none font-medium min-[400px]:block"
+        class="hidden h-full text-lg leading-none font-bold min-[400px]:block"
         >{SITE.title}</span
       >
     </Link>
@@ -23,7 +23,7 @@ import logo from '../../public/static/logo.svg'
           NAV_LINKS.map((item) => (
             <Link
               href={item.href}
-              class="text-foreground/60 hover:text-foreground capitalize transition-colors"
+              class="text-foreground/80 hover:text-foreground font-medium capitalize transition-colors"
             >
               {item.label}
             </Link>
