--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,12 +43,12 @@
 }
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --background: oklch(0.98 0.015 85);
+  --foreground:oklch(0.5 0.12 250);/* oklch(0.145 0 0);*/
+  --primary:  oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
+  --muted-foreground: oklch(0.145 0.08 250);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
@@ -56,13 +56,13 @@
 
 [data-theme='dark'] {
   --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
+  --foreground: oklch(0.95 0.12 250);
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
+  --muted-foreground: oklch(0.6 0.08 250);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
+  --border: oklch(0.6735 0.3123 324 /40%);
   --ring: oklch(0.556 0 0);
 }
 
