--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -149,3 +149,89 @@
 @utility small {
   @apply text-sm leading-6 [&_code]:text-xs [&_img,video,figure,details,blockquote,.katex-display,.expressive-code]:my-4! [&_li,ol]:mt-0 [&_p]:my-2! [&_ul]:my-0;
 }
+
+
+
+/*hover-card code from https://github.com/sadmanca/blogv3/blob/8b4e00ad6a6ee4e33966138230e9f095080728da/src/styles/typography.css#L459*/
+.hover-card {
+  @apply no-underline transition-all duration-200 ease-in-out rounded-lg;
+  position: relative;
+}
+
+.hover-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: inherit;
+  background: rgba(255, 255, 255, 0);
+  border: 1px solid transparent;
+  transition: all 200ms ease-in-out;
+  z-index: -1;
+}
+.hover-card:hover {
+  @apply z-10 shadow-lg;
+  box-shadow: var(--box-shadow-large);
+  transform: translateY(var(--translate-y-large));
+}
+
+.hover-card:hover::before {
+  background: rgba(0, 0, 0, 0.05);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+.hover-card:active::before {
+  background: rgba(0, 0, 0, 0.1);
+  border-color: rgba(0, 0, 0, 0.2);
+  transition: all 100ms ease-in;
+}
+
+.hover-card.highlight::before {
+  background: rgba(255, 235, 59, 0.15);
+}
+
+.hover-card.highlight:hover::before {
+  background: rgba(255, 235, 59, 0.25);
+  border-color: rgba(255, 193, 7, 0.3);
+}
+
+.hover-card.highlight:active::before {
+  background: rgba(255, 235, 59, 0.2);
+  border-color: rgba(255, 193, 7, 0.4);
+}
+
+[data-theme='dark'] .hover-card:hover::before {
+  background: rgba(255, 255, 255, 0.05);
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+[data-theme='dark'] .hover-card:hover {
+  box-shadow: 0px 3px 2px rgba(255, 255, 255, 0.1), 0px 3px 1px rgba(255, 255, 255, 0.05), 9px 14px 18px rgba(255, 255, 255, 0.08) !important;
+}
+
+[data-theme='dark'] .hover-card:active::before {
+  background: rgba(255, 255, 255, 0.08);
+  border-color: rgba(255, 255, 255, 0.15);
+  transition: all 100ms ease-in;
+}
+
+[data-theme='dark'] .hover-card.highlight::before {
+  background: rgba(255, 235, 59, 0.2);
+}
+
+[data-theme='dark'] .hover-card.highlight:hover::before {
+  background: rgba(255, 235, 59, 0.3);
+  border-color: rgba(255, 193, 7, 0.4);
+}
+
+[data-theme='dark'] .hover-card.highlight:active::before {
+  background: rgba(255, 235, 59, 0.25);
+  border-color: rgba(255, 193, 7, 0.5);
+}
+:root {
+  --box-shadow-small: 0px 0.1px 0.1px #e9e9e9, 0px 0.1px 0.1px #e8e8e8, 0.1px 0px 0px rgba(0, 0, 0, 0.06);
+  --box-shadow-large: 0px 2px 1px #e9e9e9, 0px 3px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.01);
+  --translate-y-small: -2px;
+  --translate-y-large: -3px;
+}
