--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,7 +14,7 @@ const { project } = Astro.props
 ---
 
 <div
-  class="hover:bg-muted/50 rounded-xl border p-4 transition-colors duration-300 ease-in-out"
+  class="hover:bg-muted/50 rounded-xl border p-4 transition-colors duration-300 ease-in-out hover-card"
 >
   <Link
     href={project.data.link}
