--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,10 +10,10 @@ import logo from '../../public/static/logo.svg'
   <div
     class="mx-auto flex max-w-3xl items-center justify-between gap-4 px-4 py-3"
   >
-    <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
-      <Image src={logo} alt="Logo" class="size-5 sm:size-6" />
+    <Link href="/" class="flex shrink-0 items-center justify-center gap-3 group">
+      <Image src={logo} alt="Logo" class="size-5 sm:size-6 group-hover:rotate-360 transition-all duration-700" />
       <span
-        class="hidden h-full text-lg leading-none font-bold min-[400px]:block"
+        class="hidden h-full text-lg leading-none font-light min-[400px]:block group-hover:font-bold transition-all duration-300"
         >{SITE.title}</span
       >
     </Link>
