--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,9 @@ const projects = await getAllProjects()
   <section>
     <div class="min-w-full">
       <div class="prose mb-8">
-        <p class="mt-0">
+
+        COMING SOON!
+        <!-- <p class="mt-0">
           astro-erudite is an opinionated, unstyled static blogging template
           that prioritizes simplicity and performance, built with <Link
             href="https://astro.build"
@@ -35,13 +37,13 @@ const projects = await getAllProjects()
             href="/blog/the-state-of-static-blogs"
             underline>The State of Static Blogs in 2024</Link
           >.
-        </p>
+        </p> -->
       </div>
 
-      <h2 class="mb-4 text-2xl font-medium">Example Projects Listing</h2>
+      <!-- <h2 class="mb-4 text-2xl font-medium">Example Projects Listing</h2>
       <div class="flex flex-col gap-4">
         {projects.map((project) => <ProjectCard project={project} />)}
-      </div>
+      </div> -->
     </div>
   </section>
 </Layout>
