--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,7 +2,7 @@
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
 import Link from '@/components/Link.astro'
 import PageHead from '@/components/PageHead.astro'
-import { Badge, badgeVariants } from '@/components/ui/badge'
+import { Badge} from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
 import { getSortedTags } from '@/lib/data-utils'
 import { cn } from '@/lib/utils'
